experiments/kubernetes/s3_endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cortx-io-svc
subsets:
  - addresses:
      - ip: <IP_of_storage-node1_pod>
      - ip: <IP_of_storage-node2_pod>
      - ip: <IP_of_storage-node3_pod>
    ports:
      - name: port80
        port: 80
      - name: port443
        port: 443
      - name: port9080
        port: 9080
      - name: port9443
        port: 9443
      - name: port28049
        port: 28049
