experiments/kubernetes/cortx_io_svc_ingress.yaml
# Ingress service for cortx-io-svc internal service.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  ingressClassName: nginx
  rules:
  - host: iam.seagate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cortx-io-svc
            port:
              number: 9080
  - host: s3.seagate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cortx-io-svc
            port:
              number: 80
